# HydroAnalytics

./: LICENSE  README.md  pyproject.toml  setup.py
hydroanalytics/: hydroanalytics.py
hydroanalytics/hydrograph/decomposition/: baseflow.py  seasonality.py
hydroanalytics/precipitation/: __init__.py  precipitation.py
hydroanalytics/precipitation/tests/: test_precipitation.py
hydroanalytics/precipitation/tests/data/: __init__.py
hydroanalytics/tests/data/: __init__.py
hydroanalytics/tests/precipitation/: test_precipitation.py
